--- a/src/index.css
+++ b/src/index.css
@@ -59,10 +59,6 @@ html, body {
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding-top: env(safe-area-inset-top);
-  padding-bottom: env(safe-area-inset-bottom);
-  padding-left: env(safe-area-inset-left);
-  padding-right: env(safe-area-inset-right);
 }
 
 /* Base Styles */
